Implemented suggested changes to improve functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       </div>
     </div>
     <script type="module" src="storemovies.js"></script>
-    <script src="movie.js"></script>
+    <script type="module" src="movie.js"></script>
   </body>
 </html>
