--- a/index.html
+++ b/index.html
@@ -40,13 +40,22 @@
     </header>
     <main class="main">
       <div class="sort-container">
-        <select name="" id="sort-select">
-          <option value="">Sort By</option>
-          <option value="title">Title</option>
-          <option value="year">Year</option>
-          <option value="rating">Rating</option>
-        </select>
+        <div class="genre-dropdown">
+          <button class="genre-dropdown-btn">
+            Genre <i class="fa-solid fa-caret-down"></i>
+          </button>
+          <div class="genre-dropdown-content" id="genre-tags"></div>
+        </div>
+        <div>
+          <select name="" id="sort-select">
+            <option value="">Sort By</option>
+            <option value="title">Title</option>
+            <option value="year">Year</option>
+            <option value="rating">Rating</option>
+          </select>
+        </div>
       </div>
+
       <div class="movie-grid" id="movie-grid"></div>
       <div id="movieModal" class="modal">
         <div class="modal-content">
